# html2phpbbcode

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
html2phpbbcode/: parser.py
html2phpbbcode/data/: ipb3.conf
tests/: test_basic_font_styles.py  test_blockquote.py  test_code.py  test_font_tag.py  test_headings.py  test_images.py  test_invalid_tags.py  test_links.py  test_lists.py  test_plaintext.py  test_whitespace.py
