[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html2phpbbcode"
version = "0.2.0a1"
description = "HTML to phpBB-compatible BBCode converter"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    { name = "Theodoros Diamantidis", email = "diamaltho@gmail.com" },
]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "html2bbcode",
    "regex>=2026.4.4",
]

[project.urls]
Homepage = "https://github.com/tdiam/html2phpbbcode"

[dependency-groups]
test = [
    "pytest>=7",
]

[tool.uv.sources]
html2bbcode = { git = "https://github.com/Crewscope/html2bbcode.git" }
